# Crux

./: .gitignore  .gitmodules  .justfile  CMakeLists.txt  LICENSE  README.md  README_HELLO_WORLD.md  format-main.sh  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  krux_logo.c  krux_logo.h  main.c
main/key/: key.c  key.h
main/pages/: login.c  login.h  qr_scanner.c  qr_scanner.h  splash_screen.c  splash_screen.h
main/pages/home_pages/: addresses.c  addresses.h  home.c  home.h  public_key.c  public_key.h  sign.c  sign.h
main/pages/home_pages/backup/: mnemonic_words.c  mnemonic_words.h
main/pages/login_pages/: about.c  about.h  key_confirmation.c  login.c  login.h  mnemonic_loading.c  passphrase.c  passphrase.h
main/pages/login_pages/load_mnemonic_pages/: load_menu.c  (+3 more)
main/psbt/: psbt.c  psbt.h
main/ui_components/: README_DARK_THEME.md  README_MENU.md  dark_theme.c  dark_theme.h  dark_theme_examples.c  dark_theme_examples.h  flash_error.c  flash_error.h  prompt_dialog.c  prompt_dialog.h  qr_viewer.c  qr_viewer.h  simple_dialog.c  simple_dialog.h  theme.c  theme.h  tron_theme.c  tron_theme.h  ui_input_helpers.c  ui_input_helpers.h  ui_key_info.c  ui_key_info.h  ui_keyboard.c  ui_keyboard.h  ui_menu.c  ui_menu.h  ui_word_count_selector.c  ui_word_count_selector.h
main/ui_components/icons/: icons_24.c  icons_24.h
main/ui_components/logo/: kern_logo_font.c  kern_logo_font.h  kern_logo_lvgl.c  kern_logo_lvgl.h
main/utils/: memory_utils.h  mnemonic_qr.c  mnemonic_qr.h  qr_codes.c  qr_codes.h  urtypes.c  urtypes.h
main/wallet/: wallet.c  wallet.h
(+32 files in other folders)
